Fixed site title line 2 alignment issue with "Stanford" text when lines 3 and 4 are used.

--- a/sass/stanford_jumpstart_home.scss
+++ b/sass/stanford_jumpstart_home.scss
@@ -254,7 +254,7 @@
         border: none;
     }
     #header.line4 #logo {
-        background-position: left top;
+        background-position: left bottom 30px;
     }
     #header #logo a {
         display: inline-block;
@@ -305,7 +305,7 @@
         border: none;
     }
     #header.line4 #logo {
-        background-position: left top;
+        background-position: left bottom 30px;
     }
     #header #logo a {
         display: inline-block;
@@ -356,7 +356,7 @@
         border: none;
     }
     #header.line4 #logo {
-        background-position: left top;
+        background-position: left bottom 30px;
     }
     #header #logo a {
         display: inline-block;
